@@ -1,6 +1,11 @@
 (11/08/14)
 ==========
 
+· Added Server > Web Server > Nginx
+
+(11/08/14)
+==========
+
 · Added Config > SSID Configurator
 
 (06/08/14)
